# coap-via-serial

./: LICENSE  README.md
client/: Makefile  README.md  client.c  constant.h  functions.c  functions.h
common/: MessageData.h  common.c  common.h
examples/: README.md  http_server.py
server/: Makefile  README.md  constant.h  devices.txt  functions.c  functions.h  main  main.c  main2  main2.c  server.c
test/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  unit_tests.cpp
